# my_quize8

./: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/: CMakeLists.txt
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/4/: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/5/: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/6/: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/7/: README.md
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/data/: scores-equal.txt  scores-no-match.txt  scores.txt
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/include/: score.h
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/reports/: gdb-session.txt
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/sample/: CMakeLists.txt  hello_test.cc
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/src/: main.c  score.c
assignment-8-final-quiz-Liemmenghour123-main/assignment-8-final-quiz-Liemmenghour123-main/4-7/tests/: CMakeLists.txt  autograde_score_analyzer.sh  test_score.cpp
(+19 files in other folders)
